src/tui/render/snapshots/frame__tui__render__project_picker__tests__picker_shows_a_notice_when_the_project_vanished.snap
---
source: src/tui/render/project_picker.rs
expression: output
---






                ┌ Projects ────────────────────────────────────┐
                │                                              │
                │ Project Alpha is gone — ~/alpha no longer    │
                │ exists. 2 unsaved files discarded with it.   │
                │                                              │
                │ ▶ Project Beta  (not found)                  │
                │                                              │
                │ sorted by: recent                            │
                │ ↑↓/jk navigate  Enter open  s sort           │
                │ X remove  Esc close                          │
                └──────────────────────────────────────────────┘
