src/tui/render/snapshots/frame__tui__render__project_picker__tests__picker_with_entries.snap
---
source: src/tui/render/project_picker.rs
expression: output
---







                ┌ Projects ────────────────────────────────────┐
                │                                              │
                │ ▶ Project Alpha  (not found)                 │
                │   Project Beta   (not found)                 │
                │                                              │
                │ sorted by: recent                            │
                │ ↑↓/jk navigate  Enter open  s sort           │
                │ X remove  Esc close                          │
                └──────────────────────────────────────────────┘
